Thu Dec 09 11:15:30 1999  Marcel Bosc  <bosc@ceic.com>

	* htlib/Configuration.cc (Read): Read is now a virtual function: the old one 
	for Configuration the new one (Vadim's ... with the parser) in HtConfiguration
	
Thu Dec 09 11:01:22 1999  Loic Dachary  <loic@ceic.com>

	* acinclude.m4: upgrade AC_PROG_APACHE macro for 
	  modules detection.

	* test/conf/httpd.conf,test/test_functions.in,test/conf/Makefile:
	  use @APACHE_MODULES@ to accomodate various apache modules directory
	  flavors.

Tue Dec 07 20:32:34 1999  Marcel Bosc   <bosc@ceic.com>

	* htdig: Split the Configuration class into Configuration
	and HtConfiguration. All the HtConfiguration and the 
	configuration parsing (lex..)  was woved to htcommon.
	Configuration was replaced by HtConfiguration as needed

Tue Dec 07 16:21:13 1999  Loic Dachary  <loic@ceic.com>

	* configure.in: added AM_PROG_LEX and AC_PROG_YACC 

	* htlib/Makefile.am: simply set conf_lexer.lxx and conf_parser.yxx, 
	  automake knows how to handle these. The renaming is needed to avoid
	  conflicts in automake generated rules.

Mon Dec  6 16:23:39 CST 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/cf_generate.pl: added a bit of error checking for when it
	can't fetch the config info, and made it more flexible for what it
	allows as terminator.
	* htcommon/defaults.cc: add default and description for authorization
	attribute, and clean up external_protocols entry for cf_generate.pl.
	* htdoc/attrs.html, cf_by{name,prog}.html: reran cf_generate.pl
	* htdig/htdig.cc(main): set authorization parameter before Retriever
	constuctor is called, as it may initialize a Server.  (Should complete
	fix of PR#490.)

Mon Dec  6 21:34:29 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htdig/Document.cc htdig/htdig.cc: "authorization" parameter
	in config is added and is new config compatible.
	New code has'n got PR#490 bug (don't authentificate robot.txt)

Mon Dec 06 11:58:56 1999   Marcel Bosc <bosc@ceic.com>
