@@ -1,3 +1,9 @@
+Thu Dec  9 12:09:51 EET 1999  Vadim Chekan <vadim@etc.lviv.ua>
+
+	* htcommon/HtConfiguration.cc: bug fix: sometimes
+	htConfiguration::Find(url,char*) retuned empty values
+	even if there was something to return.
+
 Thu Dec 09 11:15:30 1999  Marcel Bosc  <bosc@ceic.com>
 
 	* htlib/Configuration.cc (Read): Read is now a virtual function: the old one 
